--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<div id="generateContainer">
+<div class="generateContainer">
     <div class="generate">2</div>
     <div class="generate">3</div>
     <div class="generate">4</div>
@@ -22,7 +22,7 @@
     <div class="generate">10</div>
 </div>
 <br>
-<div id="results"></div>
+<div class="results"></div>
 
 <script src="jquery.min.js"></script>
 <script src="script.js"></script>
