--- a/index.html
+++ b/index.html
@@ -10,17 +10,28 @@
 </head>
 
 <body>
-<div class="generateContainer">
-    <div class="generate">2</div>
-    <div class="generate">3</div>
-    <div class="generate">4</div>
-    <div class="generate">5</div>
-    <div class="generate">6</div>
-    <div class="generate">7</div>
-    <div class="generate">8</div>
-    <div class="generate">9</div>
-    <div class="generate">10</div>
+<div class = "container">
+    <div class = "optionsContainer">
+        <div class="option button">Groups of X Size</div>
+        <div class="option button">X Number of Groups</div>
+    </div>
+    <!--<br>-->
+    <div class="numberContainer">
+        <div class="number button">2</div>
+        <div class="number button">3</div>
+        <div class="number button">4</div>
+        <br>
+        <div class="number button">5</div>
+        <div class="number button">6</div>
+        <div class="number button">7</div>
+        <br>
+        <div class="number button">8</div>
+        <div class="number button">9</div>
+        <div class="number button">10</div>
+    </div>
 </div>
+<br>
+<div class = "generate button">Generate!</div>
 <br>
 <div class="results"></div>
 
