CSS pretty done with option buttons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <div class = "container">
     <div class = "optionsContainer">
-        <div class="option button">Groups of X Size</div>
+        <div class="option button selected">Groups of X Size</div>
         <div class="option button">X Number of Groups</div>
     </div>
     <!--<br>-->
