--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
 <div class = "container">
     <div class = "optionsContainer">
-        <div class="option button selected">Groups of X Size</div>
-        <div class="option button">X Number of Groups</div>
+        <div class="option button selected">X Number of Groups</div>
+        <div class="option button">Groups of X Size</div>
     </div>
     <!--<br>-->
     <div class="numberContainer">
