Option toggling working

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
 <div class = "container">
     <div class = "optionsContainer">
-        <div class="option button selected">X Number of Groups</div>
-        <div class="option button">Groups of X Size</div>
+        <div class="option button selected" data-id="number">X Number of Groups</div>
+        <div class="option button" data-id="size">Groups of X Size</div>
     </div>
     <!--<br>-->
     <div class="numberContainer">
