Coloring of number options working

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="number button">4</div>
         <br>
         <div class="number button">5</div>
-        <div class="number button">6</div>
+        <div class="number button selected">6</div>
         <div class="number button">7</div>
         <br>
         <div class="number button">8</div>
