--- a/index.html
+++ b/index.html
@@ -11,12 +11,25 @@
 
 <body>
 <div class = "container">
-    <div class = "optionsContainer">
-        <div class="option button selected" data-id="number">X Number of Groups</div>
-        <div class="option button" data-id="size">Groups of X Size</div>
-    </div>
+    <!--<div class = "optionsContainer">-->
+        <!--<div class="option button selected" data-id="number">X Number of Groups</div>-->
+        <!--<div class="option button" data-id="size">Groups of X Size</div>-->
+    <!--</div>-->
     <!--<br>-->
-    <div class="numberContainer">
+    <div class="numberContainer">Number of Teams:<br>
+        <div class="number button">2</div>
+        <div class="number button">3</div>
+        <div class="number button">4</div>
+        <br>
+        <div class="number button">5</div>
+        <div class="number button">6</div>
+        <div class="number button">7</div>
+        <br>
+        <div class="number button">8</div>
+        <div class="number button">9</div>
+        <div class="number button">10</div>
+    </div>
+    <div class="sizeContainer">Size of Teams:<br>
         <div class="number button">2</div>
         <div class="number button">3</div>
         <div class="number button">4</div>
