Toggling color and setting of both number pads working

--- a/index.html
+++ b/index.html
@@ -11,36 +11,31 @@
 
 <body>
 <div class = "container">
-    <!--<div class = "optionsContainer">-->
-        <!--<div class="option button selected" data-id="number">X Number of Groups</div>-->
-        <!--<div class="option button" data-id="size">Groups of X Size</div>-->
-    <!--</div>-->
-    <!--<br>-->
     <div class="numberContainer">Number of Teams:<br>
-        <div class="number button">2</div>
-        <div class="number button">3</div>
-        <div class="number button">4</div>
+        <div class="number button" data-number="2">2</div>
+        <div class="number button" data-number="3">3</div>
+        <div class="number button" data-number="4">4</div>
         <br>
-        <div class="number button">5</div>
-        <div class="number button">6</div>
-        <div class="number button">7</div>
+        <div class="number button" data-number="5">5</div>
+        <div class="number button" data-number="6">6</div>
+        <div class="number button" data-number="7">7</div>
         <br>
-        <div class="number button">8</div>
-        <div class="number button">9</div>
-        <div class="number button">10</div>
+        <div class="number button" data-number="8">8</div>
+        <div class="number button" data-number="9">9</div>
+        <div class="number button" data-number="10">10</div>
     </div>
     <div class="sizeContainer">Size of Teams:<br>
-        <div class="number button">2</div>
-        <div class="number button">3</div>
-        <div class="number button">4</div>
+        <div class="number button" data-size="2">2</div>
+        <div class="number button" data-size="3">3</div>
+        <div class="number button" data-size="4">4</div>
         <br>
-        <div class="number button">5</div>
-        <div class="number button">6</div>
-        <div class="number button">7</div>
+        <div class="number button" data-size="5">5</div>
+        <div class="number button" data-size="6">6</div>
+        <div class="number button" data-size="7">7</div>
         <br>
-        <div class="number button">8</div>
-        <div class="number button">9</div>
-        <div class="number button">10</div>
+        <div class="number button" data-size="8">8</div>
+        <div class="number button" data-size="9">9</div>
+        <div class="number button" data-size="10">10</div>
     </div>
 </div>
 <br>
