Add title to HTML page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Team Generator!</title>
 
     <meta name="description" content="Webpage">
     <link href="stylesheet.css" rel="stylesheet">
